--- a/db/.env
+++ b/db/.env
@@ -1,2 +1,2 @@
-DB_CONNECTION = mongodb://localhost:27017/proyecto_informatico
+DB_CONNECTION = mongodb+srv://user1:qwertyuiop@proyectoi-1.w1ufz.mongodb.net/?retryWrites=true&w=majority&appName=ProyectoI-1
 PORT = 3000
