--- a/db/.env
+++ b/db/.env
@@ -1,3 +1,6 @@
 DB_CONNECTION = mongodb+srv://user1:qwertyuiop@proyectoi-1.w1ufz.mongodb.net/?retryWrites=true&w=majority&appName=ProyectoI-1
 PORT = 3000
-AZ_CONN = Reemplazar con key
+AZ_CONN = reemplazar con la coneccion
+AZ_ACC_NAME = ecografias4d
+AZ_ACC_KEY = reemplazar con la key
+
