--- a/back/package.json
+++ b/back/package.json
@@ -15,6 +15,7 @@
     "@types/fluent-ffmpeg": "^2.1.27",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.9.0",
+    "@types/nodemailer": "^6.4.16",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
@@ -24,6 +25,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.16"
   }
 }
