--- a/back/.env
+++ b/back/.env
@@ -1,3 +1,4 @@
 EMAIL_HOST=smtp.gmail.com        # e.g., smtp.gmail.com for Gmail
 EMAIL_USER=s4302514@gmail.com      # Your email address
-EMAIL_PASS=iaew jgyd fhei xank    # Your email password or app-specific password
+EMAIL_PASS=iaew jgyd fhei xank    # Your email password or app-specific password}
+PORT_DB = 9000
