--- a/back/package.json
+++ b/back/package.json
@@ -26,6 +26,8 @@
     "express": "^4.21.1",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.9.16"
+    "nodemailer": "^6.9.16",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1"
   }
 }
